# lifelong-paper

./: .gitignore  README.md  SoeiroTech_API_v3.json  SoeiroTech_Local_Environment.json  SoeiroTech_Production_Environment.json  manage.py  pyproject.toml
arquvivos-json/: SoeiroTech_Environments_v3.json
arquvivos-json/old/: SoeiroTech_API_Collection.json  SoeiroTech_API_v2.json  SoeiroTech_API_v2_part1.json  SoeiroTech_API_v2_part2.json  SoeiroTech_Environments.json
core/: asgi.py  urls.py  views.py  wsgi.py
core/settings/: base.py  dev.py  prod.py
cursos/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
cursos/migrations/: 0001_initial.py
devroadmap/: admin.py  apps.py  models.py  urls.py  views.py
devroadmap/migrations/: 0001_initial.py
devroadmap/templatetags/: roadmap_tags.py
frontend/: package.json
frontend/src/: App.css  App.js  index.css  testApi.js
papers/: admin.py  models.py  urls.py  views.py
papers/migrations/: 0001_initial.py
profiles/: admin.py  models.py  signals.py
profiles/migrations/: 0001_initial.py
projetos/: apps.py  models.py  urls.py  views.py
projetos/migrations/: 0001_initial.py  0002_projeto_progresso.py  0003_projeto_imagem.py  0004_projeto_demo_projeto_docs_projeto_repo_and_more.py  0005_projetocomentario.py
projetos/templatetags/: projeto_tags.py
scripts/: check_env.sh
scripts/descricao-scripts/: check_env_django.md
tasks/: models.py  urls.py  views.py
tasks/migrations/: 0001_initial.py
visual/: admin.py  models.py  urls.py  views.py
visual/migrations/: 0001_initial.py
(+29 files in other folders)
