[project]
name = "lifelong-paper"
version = "0.1.0"
description = "Personal lifelong notebook and daily dashboard"
authors = [
    {name = "mandresoeiro",email = "mandre.soeiro@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django (>=6.0,<7.0)",
    "pillow (>=12.0.0,<13.0.0)",
    "isntall (>=1.0.1,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
